Fixed js in game and alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ nav ul a {
   text-decoration: none;
 }
 .banner_full {
-  border-bottom: solid 10px #bc6d02;
+ border-bottom: solid 30px #bc6d02;
 }
 .hero {
   background: url('/../img/ollie_lake.jpg');
@@ -84,7 +84,7 @@ nav ul a {
 }
 /** Main Section */
 .wrapper {
-  border-top: #003049 solid 45px;
+ 
   margin: 0;
 }
 .inner {
@@ -99,8 +99,8 @@ nav ul a {
 .photo-back {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
-  width: 58%;
+  margin-left: 25px;
+  width: 50%;
 }
 .photo-back h2 {
   padding-top: 70px;
@@ -116,8 +116,8 @@ nav ul a {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin: auto;
-  padding-bottom: 25px;
+  margin: 0 auto;
+  padding-bottom: 5px;
   width: 100%;
 }
 .grid {
@@ -127,6 +127,7 @@ nav ul a {
   background-color: #bc6d02;
   color: #003049;
   margin: 0 auto;
+  padding-bottom: 10px;
   text-align: center;
 }
 .box {
@@ -134,15 +135,16 @@ nav ul a {
   border-radius: 30px;
   display: flex;
   flex-direction: column;
-  margin: 40px 0 20px 50px;
+  margin: 05%;
 
   max-width: 80%;
 }
 .image-fit {
   border-radius: 6px;
   display: inline-block;
-  max-width: 90%;
-  margin: 10px 0 0 25px;
+  max-width: 50%;
+  margin: 0 auto;
+  padding-top: 15px;
   object-fit: contain;
   text-align: center;
 }
@@ -153,12 +155,14 @@ nav ul a {
   margin: 0 auto;
   max-width: 80%;
   max-height: 80%;
+  padding-top: 10px;
   text-align: center;
 }
 .title-project {
   margin: 0;
 }
 .tech-box {
+  margin: 0 auto;
   max-width: 80%;
 }
 .tech-box:hover {
@@ -171,11 +175,13 @@ nav ul a {
   text-decoration: underline;
 }
 .technologies {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
   align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
+
 .align-center a {
   border: 1px solid #003049;
   color: #003049;
